--- a/styles/variables.css
+++ b/styles/variables.css
@@ -2,3 +2,18 @@
   Переменные для вашего проекта
   и их переопределение под различные устройства
 */
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    --main-title-color: rgb(219, 0, 255);
+    --sub-title-color: rgba(0, 0, 40, 1);
+    --text-color: rgba(241, 178, 206, 1);
+    --accent-color: rgba(255, 0, 112, 1);
+    --bg-image: url(../images/cover-image-dark.png);
+  }
+  
+}
+
+@media (prefers-color-scheme: light) {
+  
+}
