--- a/styles/variables.css
+++ b/styles/variables.css
@@ -10,6 +10,7 @@
     --text-color: rgba(241, 178, 206, 1);
     --accent-color: rgba(255, 0, 112, 1);
     --bg-image: url(../images/cover-image-dark.png);
+    --decorative-element-border: 1px solid var(--accent-color);
   }
   
 }
