--- a/styles/dark.css
+++ b/styles/dark.css
@@ -5,8 +5,12 @@
 */
 
 .page.theme_dark {
-  /* сохраните этот селектор в приведённом виде.
-    Так стили написанные ниже будут иметь больший вес,
-    чем стили в медиазапросе предпочтений пользователя
-  */
+  --main-title-color: rgb(219, 0, 255);
+  --sub-title-color: rgba(0, 0, 40, 1);
+  --text-color: rgba(241, 178, 206, 1);
+  --accent-color: rgba(255, 0, 112, 1);
+  --section-title-color: var(--accent-color);
+  --bg-image: url(../images/cover-image-dark.png);
+  --decorative-element-border: 1px solid var(--accent-color);
+  --opacity-for-rec-circle: 1;
 }
