--- a/styles/style.css
+++ b/styles/style.css
@@ -2,12 +2,10 @@
 
 .page {
   font-family: "IBM Plex mono", sans-serif;
-  /*
   background-image: var(--bg-image);
   background-position: center;
   background-size: cover;
   background-attachment: fixed;
-  */
   padding: 20px;
   font-size: 18px;
   color: var(--text-color);
@@ -34,7 +32,7 @@
 .header__theme-menu-button {
   border: none;
   background-color: transparent;
-  color: var(--accent-color);
+  color: var(--section-title-color);
 }
 
 .header__top-box-decorative-element {
@@ -56,6 +54,7 @@
   background-color: var(--accent-color);
   border-radius: 50%;
   box-shadow: 0 0 4px 2px var(--accent-color);
+  opacity: var(--opacity-for-rec-circle);
 }
 
 .header__top-box-decorative-element::before {
@@ -64,6 +63,7 @@
   right: 27px;
   text-transform: uppercase;
   color: var(--accent-color);
+  opacity: var(--opacity-for-rec-circle);
 }
 
 /* Second Row */
@@ -98,6 +98,9 @@
 /* Third Row */
 .header__bottom-decorative-element {
   margin-block-start: 89px;
+}
+/* Стили декоративного квадрата с двумя границами */
+.decorative__element {
   width: 25px;
   height: 25px;
   border-inline-start: var(--decorative-element-border);
@@ -191,7 +194,7 @@
 }
 
 .section__title-decor {
-  color: var(--accent-color);
+  color: var(--section-title-color);
   font-size: 18px;
   line-height: 23.4px;
 }
@@ -366,4 +369,144 @@
 
 /* End of third section */
 
+/* Section with pictures */
+.section__pictures {
+  margin-block-start: 80px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.section__pictures-pictures-box {
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: 260px 315px 428px;
+  gap: 20px;
+}
+
+.section__pictures-pictures-box-img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.section__pictures-pictures-box-img:nth-child(1) {
+  grid-column: 1 / 3;
+}
+
+.section__pictures-pictures-box-img:nth-child(2) {
+  grid-column: 3;
+  grid-row: 1 / 3;
+}
+
+.section__pictures-pictures-box-img:nth-child(3) {
+  grid-column: 1;
+  grid-row: 2 / 4;
+}
+
+.section__pictures-pictures-box-img:nth-child(4) {
+  grid-column: 2;
+  grid-row: 2;
+}
+
+.section__pictures-pictures-box-img:nth-child(5) {
+  grid-column: 2 / 4;
+  grid-row: 3;
+}
+
+/* Плашеты */
+
+@media (width < 1024px) {
+  .section__pictures-pictures-box {
+    grid-template-rows: 192px 230px 318px;
+  }
+}
+
+/* Смартфоны */
+
+@media (width < 768px) {
+  .section__pictures {
+    margin-block-start: 50px;
+    gap: 10px;
+  }
+
+  .section__pictures-pictures-box {
+    grid-template-columns: 1fr;
+    grid-template-rows: 142px 355px 237px 355px 237px;
+    gap: 10px;
+  }
+
+  .section__pictures-pictures-box-img:nth-child(1) {
+    grid-column: 1;
+    grid-row: 1;
+  }
+
+  .section__pictures-pictures-box-img:nth-child(2) {
+    grid-column: 1;
+    grid-row: 2;
+  }
+
+  .section__pictures-pictures-box-img:nth-child(3) {
+    grid-column: 1;
+    grid-row: 3;
+  }
+
+  .section__pictures-pictures-box-img:nth-child(4) {
+    grid-column: 1;
+    grid-row: 4;
+  }
+
+  .section__pictures-pictures-box-img:nth-child(5) {
+    grid-column: 1;
+    grid-row: 5;
+  }
+}
+
+/* End of section with pictures */
+
 /* End of Main */
+
+/* Footer */
+.footer {
+  margin-block-start: 80px;
+  display: flex;
+  flex-direction: column;
+  gap: 274px;
+}
+
+.footer__top-decorative {
+  align-self: flex-end;
+  transform: rotate(180deg);
+}
+
+.footer__title {
+  align-self: center;
+  font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+  line-height: 82.5%;
+  color: var(--main-title-color);
+  text-shadow: 2px 2px var(--accent-color);
+}
+
+.footer__bottom-decorative {
+  align-self: flex-start;
+}
+
+/* Планшеты */
+@media (width < 1024px) {
+  .footer {
+    gap: 418px;
+  }
+}
+/* Смартфоны */
+@media (width < 768px) {
+  .footer {
+    margin-block-start: 50px;
+    gap: 251px;
+  }
+
+  .footer__title {
+    font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+  }
+}
+/* End of Footer */
