--- a/styles/light.css
+++ b/styles/light.css
@@ -10,7 +10,7 @@
   --text-color: rgba(53, 52, 48, 1);
   --accent-color: rgba(255, 141, 203, 1);
   --section-title-color: rgba(53, 52, 48, 1);
-  --bg-image: url(../images/cover-image-light.png);
+  --bg-image: url(/images/cover-image-light.png);
   --decorative-element-border: 1px solid var(--section-title-color);
   --opacity-for-rec-circle: 0;
 }
