--- a/styles/variables.css
+++ b/styles/variables.css
@@ -2,6 +2,16 @@
   Переменные для вашего проекта
   и их переопределение под различные устройства
 */
+:root {
+  --main-title-color: rgb(219, 0, 255);
+  --sub-title-color: rgba(0, 0, 40, 1);
+  --text-color: rgba(241, 178, 206, 1);
+  --accent-color: rgba(255, 0, 112, 1);
+  --section-title-color: var(--accent-color);
+  --bg-image: url(../images/cover-image-dark.png);
+  --decorative-element-border: 1px solid var(--accent-color);
+  --opacity-for-rec-circle: 1;
+}
 
 @media (prefers-color-scheme: dark) {
   :root {
