--- a/styles/light.css
+++ b/styles/light.css
@@ -4,6 +4,30 @@
   переключая тему
 */
 
+:root.theme_light {
+  --main-title-color: rgba(255, 194, 230, 1);
+  --sub-title-color: rgba(53, 52, 48, 1);
+  --text-color: rgba(53, 52, 48, 1);
+  --accent-color: rgba(255, 141, 203, 1);
+  --section-title-color: rgba(53, 52, 48, 1);
+  --bg-image: url(../images/cover-image-light.png);
+  --decorative-element-border: 1px solid var(--section-title-color);
+  --opacity-for-rec-circle: 0;
+}
+
+@media (prefers-color-scheme: light) {
+  .page {
+    --main-title-color: rgba(255, 194, 230, 1);
+    --sub-title-color: rgba(53, 52, 48, 1);
+    --text-color: rgba(53, 52, 48, 1);
+    --accent-color: rgba(255, 141, 203, 1);
+    --section-title-color: rgba(53, 52, 48, 1);
+    --bg-image: url(../images/cover-image-light.png);
+    --decorative-element-border: 1px solid var(--section-title-color);
+    --opacity-for-rec-circle: 0;
+  }
+}
+
 .page.theme_light {
   --main-title-color: rgba(255, 194, 230, 1);
   --sub-title-color: rgba(53, 52, 48, 1);
