--- a/styles/style.css
+++ b/styles/style.css
@@ -364,7 +364,7 @@
 .section__better-concetnration-box-list-item {
   display: flex;
   flex-direction: column;
-  gap: 10px;
+  gap: 9.5px; /* Подгонка под макет */
 }
 
 .section__better-concetnration-box-list-item-header-paragraph {
