--- a/styles/light.css
+++ b/styles/light.css
@@ -12,7 +12,7 @@
   --section-title-color: rgba(53, 52, 48, 1);
   --bg-image: url(../images/cover-image-light.png);
   --decorative-element-border: 1px solid var(--section-title-color);
-  --opacity-for-rec-circle: 0;
+  --display-decorative-element: none;
 }
 
 @media (prefers-color-scheme: light) {
