--- a/styles/style.css
+++ b/styles/style.css
@@ -84,29 +84,27 @@
   height: 25px;
   top: 20px;
   right: 20px;
-  border-block-start: 1px solid var(--accent-color);
-  border-inline-end: 1px solid var(--accent-color);
+  border-block-start: 1px solid var(--section-title-color);
+  border-inline-end: 1px solid var(--section-title-color);
 }
 
 .header__top-decorative-element::before {
   content: "";
-  display: block;
+  display: var(--display-decorative-element);
   margin: auto;
   width: 9px;
   height: 9px;
   border-radius: 50%;
-  background-color: var(--accent-color);
-  box-shadow: 0 0 4px 2px var(--accent-color);
-  opacity: var(--opacity-for-rec-circle);
+  background-color: var(--section-title-color);
+  box-shadow: 0 0 4px 2px var(--section-title-color);
 }
 
 .header__top-decorative-element span {
   position: absolute;
-  display: block;
+  display: var(--display-decorative-element);
   right: 27px;
   text-transform: uppercase;
   color: var(--accent-color);
-  opacity: var(--opacity-for-rec-circle);
 }
 
 .header__bottom-decorative-element {
@@ -116,8 +114,8 @@
   height: 25px;
   bottom: 20px;
   left: 20px;
-  border-block-end: 1px solid var(--accent-color);
-  border-inline-start: 1px solid var(--accent-color);
+  border-block-end: 1px solid var(--section-title-color);
+  border-inline-start: 1px solid var(--section-title-color);
 }
 
 /* Планшеты */
@@ -482,7 +480,6 @@
   margin-block-start: 60px;
   padding: 0 20px;
   display: flex;
-  
 }
 
 .footer__top-decorative-element {
@@ -491,9 +488,8 @@
   height: 25px;
   top: 20px;
   right: 20px;
-  border-block-start: 1px solid var(--accent-color);
-  border-inline-end: 1px solid var(--accent-color);
-  
+  border-block-start: 1px solid var(--section-title-color);
+  border-inline-end: 1px solid var(--section-title-color);
 }
 
 .footer__title {
@@ -514,7 +510,6 @@
     margin-block-start: 40px;
     padding: 0 10px;
     display: flex;
-    
   }
 
   .footer__top-decorative-element {
