--- a/styles/variables.css
+++ b/styles/variables.css
@@ -8,6 +8,7 @@
   --text-color: rgba(241, 178, 206, 1);
   --accent-color: rgba(255, 0, 112, 1);
   --section-title-color: var(--accent-color);
+  --bg-color: rgba(0, 0, 40, 1);
   --bg-image: url(../images/cover-image-dark.png);
   --decorative-element-border: 1px solid var(--accent-color);
   --display-decorative-element: block;
